--- a/src/Pages/Home.css
+++ b/src/Pages/Home.css
@@ -1,9 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=EB+Garamond&family=Moon+Dance&family=Pacifico&family=Satisfy&display=swap');@import url('https://fonts.googleapis.com/css2?family=Moon+Dance&family=Pacifico&family=Satisfy&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300&display=swap');
 :root {
-  --contrast: #1aebd2;
-  --mainColor: #151515;
-  --textColor: #bebebf;
+  --contrast: #00ADB5;
+  --mainColor: #222831;
+  --textColor: #EEEEEE;
 }
 
 .App {
@@ -14,40 +14,6 @@
 }
 
 
-.social{
-  float: left;
-  display: flex;
-  width: 10%;
-  align-self: start;
-  position: fixed;
-  bottom: 0;
-  text-align: center;
-  justify-content: center;
-  z-index: 100;
-}
-
-.vertLine{
-  height: 150px;
-  border: 1px solid white;
-  width: 0;
-  margin-left: 10px;
-}
-.social img{
-  height: 25px;
-}
-.social ul{
-  list-style: none;
-}
-.social a{
-  height: 30px !important;
-}
-.social li{
-  transition: 0.1s;
-  margin-bottom: 20px;
-}
-.social li:hover{
-  transform: translateY(-5px);
-}
 .sideDiv{
   display: flex;
   flex-direction: column;
@@ -56,14 +22,16 @@
   min-height: 100vh;
   min-width: 100%;
   background-color: var(--mainColor);
-  border-bottom: 2px solid rgb(189, 189, 189);
+  border-bottom: 1px solid rgb(189, 189, 189);
 }
 .middle{
   position: relative;
   height: auto;
   width: auto;
   text-align: left;
-  margin: 50px 20px;
+  padding: 50px;
+  background: radial-gradient(#222831e4, #222831d5  ,#222831af);
+  border-radius: 50%;
 }
 .middle h2{
     font-weight: 600;
@@ -71,19 +39,24 @@
 }
 .middle > p{
   font-size: 30px;
-  color: aqua;
+  color: var(--contrast);
 
 }
 .typewriter{
-  font-size: 60px;
+  font-size: calc(25px + 2vw);
   color: var(--textColor);
 }
 .belowMid{
+  margin-top: 50px;
+  display: flex;
   align-self: auto;
   transform: translateX(-70px);
   margin-bottom: 100px;
+  align-items: center;
+  justify-content: center;
 }
 .belowMid a{
+  
   text-decoration: none;
   border: 2.5px solid var(--contrast) ;
   border-radius: 5px;
@@ -140,7 +113,7 @@
   background-color: var(--mainColor);
   min-height: 100vh;
   display: flex;
-  border-bottom: 2px solid rgb(189, 189, 189);
+  border-bottom: 1px solid rgb(189, 189, 189);
   padding: 50px 0;
 }
 .aboutTitle{
@@ -154,9 +127,11 @@
     margin-bottom: 50px;
     display: flex;
     width: 100vw;
+    
 }
 
 .content{
+
     position: relative;
     height: auto;
     width: auto;
@@ -166,6 +141,8 @@
     width: 800px;
     margin-right: 5%;
     font-size: 20px;
+    border-radius: 50%;
+    background: radial-gradient(#262a32e4, #222831d5  ,#222831af);
 }
 .content ul{
     list-style: none;
@@ -185,7 +162,7 @@
     outline: 2px solid var(--textColor);
     outline-offset: 15px;
     border-radius: 5px;
-    
+    z-index: 10;
 }
 
 
@@ -258,64 +235,18 @@
   width: 80%;
 }
 
-
-
-
-.myemail{
-  display: flex;
-  width: 10%;
-  align-self: flex-end;
-  position: fixed;
-  bottom: 0;
+.contact{
   text-align: center;
   align-items: center;
-  justify-content: center;
-  z-index: 100;
-}
-.lineright{
+  width: 100%;
+  max-width: 100vw;
+  background-color: var(--mainColor);
+  min-height: 100%;
   display: flex;
-  height: 150px;
-  border: 1px solid white;
-  width: 0;
-  margin-left: 5px;
-}
-
-.verticalEmail{
-  writing-mode: vertical-rl;
-  text-orientation: mixed;
-  margin-bottom: 10px;
-}
-.verticalEmail a{
-  text-decoration: none;
-  color: aliceblue;
-}
-.myemail ul{
-  list-style: none;
-  padding-left: 0;
-}
-.emailid{
-  transition: 0.2s;
-}
-.myemail .emailid:hover{
-  transform: translateY(-5px);
-  
-}
-.verticalEmail a:hover{
-  color: aliceblue;
-}
-
-.contact{
-    text-align: center;
-    align-items: center;
-    width: 100%;
-    max-width: 100vw;
-    background-color: var(--mainColor);
-    min-height: 100%;
-    display: flex;
-    min-height: 100vh;
-    justify-content: space-around;
-    overflow: hidden;
-    flex-wrap: wrap;
+  min-height: 100vh;
+  justify-content: space-around;
+  overflow: hidden;
+  flex-wrap: wrap;
 }
 
 #content{
@@ -325,6 +256,10 @@
   float: left;
   align-content: center;
   margin: 50px 0;
+  z-index: 10;
+  border-radius: 50%;
+  padding: 50px;
+  background: radial-gradient(#222831e4, #222831d5  ,#222831af);
 }
 #content h1{
   font-size: xxx-large;
@@ -358,6 +293,7 @@
   max-width: 90vw;
   overflow: hidden;
   margin: 50px 0;
+  z-index: 50;
 }
 form input,textarea{
   color: var(--textColor);
@@ -367,15 +303,15 @@ form input,textarea{
   border-bottom: 2px solid var(--textColor);
   width: 400px;
   font-size: 15px;
+  background-color: transparent !important;
+  
 }
+
 form input:focus{
   outline: none;
   border-bottom: 2px solid var(--contrast);
 }
 
-form input{
-  background-color: var(--mainColor);
-}
 form h2{
   color: var(--textColor);
   align-self: flex-start;
@@ -393,6 +329,5 @@ form h2{
 }
 #message{
   height: 80px;
-  background-color: var(--mainColor);
   vertical-align: bottom ;
 }
