--- a/src/Pages/Navbar.css
+++ b/src/Pages/Navbar.css
@@ -1,24 +1,32 @@
+:root {
+  --contrast: #00ADB5;
+  --mainColor: #222831;
+  --textColor: #EEEEEE;
+}
 nav{
     height: 4.5rem;
     width: 100vw;
-    background-color: #151515;
+    font-size: 25px;
     display: flex;
     position: fixed;
     z-index: 10;
-    border-bottom: 2px solid rgb(189, 189, 189);
     transition: 0.2s;
+    justify-content: space-between;
+    z-index: 20;
 }
 .colorChange{
     height: 4rem;
     border: none;
-    box-shadow: 0 2px 5px rgba(255, 255, 255, 0.2);
+    background-color: var(--mainColor);
+    box-shadow: 0 1px 3px var(--textColor);
+    z-index: 20;
 }
 
 /*Styling Links*/
 .nav-links{
     display: flex;
     list-style: none; 
-    width: 100vw;
+    width: 50vw;
     padding: 0 0.7vw;
     justify-content: space-evenly;
     align-items: center;
@@ -27,7 +35,7 @@ nav{
 .nav-links li a{
     text-decoration: none;
     margin: 0 0.7vw;
-    color: #1aebd2;
+    color: var(--textColor);
 }
 
 .nav-links li {
@@ -38,7 +46,7 @@ nav{
     display: block;
     height: 3px;
     width: 0%;
-    background-color: #61DAFB;
+    background-color: var(--textColor);
     position: absolute;
     transition: all ease-in-out 250ms;
     margin: 0 0 0 10%;
@@ -57,6 +65,7 @@ nav{
 }
 .hamburger{
     display: none;
+    z-index: 20;
 }
 
 /*Stying for small screens*/
@@ -74,14 +83,14 @@ nav{
         position: absolute;
         cursor: pointer;
         right: 5%;
-        top: 50%;
-        transform: translate(-5%, -50%);
+        top: 30%;
+        /* transform: translate(-5%, -50%); */
         z-index: 2;
         transition: all 0.7s ease;
     }
     .nav-links{
         position: fixed;
-        background: #151515;
+        background: var(--mainColor);
         height: 100vh;
         width: 100%;
         flex-direction: column;
@@ -91,8 +100,8 @@ nav{
         pointer-events: none;
     }
     .nav-links.open{
-        clip-path: circle(1000px at 90% -10%);
-        -webkit-clip-path: circle(1000px at 90% -10%);
+        clip-path: circle(1500px at 100% 0%);
+        -webkit-clip-path: circle(1500px at 100% 0%);
         pointer-events: all;
     }
     .nav-links li{
@@ -125,8 +134,7 @@ nav{
 
 #name{
     text-decoration: none;
-    width: 250px;
+    width: 350px;
     align-self: center;
-    color: rgb(189, 189, 189);
-    font-size: 20px;
+    color: var(--textColor);
 }
