--- a/src/Pages/Home.css
+++ b/src/Pages/Home.css
@@ -11,6 +11,7 @@
   width: 100% !important;
   background-color: transparent;
   position: relative;
+  z-index: 3;
 }
 
 
@@ -30,7 +31,7 @@
   width: auto;
   text-align: left;
   padding: 50px;
-  background: radial-gradient(#222831e4, #222831d5  ,#222831af);
+  
   border-radius: 50%;
 }
 .middle h2{
@@ -65,7 +66,6 @@
   transition: 0.5s;
   font-size: 30px;
   font-weight: 500;
-  position: absolute;
   font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
@@ -97,6 +97,9 @@
     .content{
       font-size: 18px !important;
     }
+    .project{
+      max-height: 450px;
+    }
     
   }
   
@@ -127,7 +130,6 @@
     margin-bottom: 50px;
     display: flex;
     width: 100vw;
-    
 }
 
 .content{
@@ -142,7 +144,7 @@
     margin-right: 5%;
     font-size: 20px;
     border-radius: 50%;
-    background: radial-gradient(#262a32e4, #222831d5  ,#222831af);
+    
 }
 .content ul{
     list-style: none;
@@ -259,7 +261,6 @@
   z-index: 10;
   border-radius: 50%;
   padding: 50px;
-  background: radial-gradient(#222831e4, #222831d5  ,#222831af);
 }
 #content h1{
   font-size: xxx-large;
@@ -330,4 +331,128 @@ form h2{
 #message{
   height: 80px;
   vertical-align: bottom ;
+}
+
+.projects{
+  text-align: center;
+  width: 100%;
+  background-color: var(--mainColor);
+  min-height: 100vh;
+  border-bottom: 1px solid rgb(189, 189, 189);
+}
+
+.projects > h1{
+  align-self: center;
+  margin-top: 0px;
+  padding: 80px 0 0 0;
+  color: var(--textColor);
+  font-family: 'Courier New', Courier, monospace;
+  font-size: calc(25px + 1vw);
+}
+
+.project{
+  width: 40vw !important;
+  height: 70vh !important;
+  min-width: 300px !important;
+  min-height: 400px !important;
+  max-width: 500px !important;
+  background-color: #EEEEEE;
+  margin: 10px 50px;
+  display: flex;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  z-index: 10;
+  transition: transform 200ms ease-out;
+  border-radius: 10px;
+}
+
+.projectDiv{
+  display: flex;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  z-index: 10;
+  flex-wrap: wrap;
+}
+
+.project:hover {
+  transform: scale(1);
+  cursor: pointer;
+}
+
+.project:not(:hover) {
+  transform: scale(0.9);
+}
+
+.bgImage1{
+  background-image: url("./wordle.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  height: 100%;
+  width: 100%;
+  filter: blur(3px);
+}
+.bgImage2{
+  background-image: url("./tesla.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  height: 100%;
+  width: 100%;
+  filter: blur(3px);
+}
+
+.projectContent{
+  position: absolute;
+  z-index: 11;
+  height: 80% !important;
+  width: 80% !important;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 2px solid white;
+  color: var(--textColor);
+  /* animation: rotation 0.2s; */
+  animation-iteration-count: 1;
+}
+
+.project1>.projectContent{
+  background-color: rgba(129, 129, 129, 0.6);  
+}
+.project2>.projectContent{
+  background-color: rgba(44, 44, 44, 0.6);
+  border: 2px solid var(--mainColor);
+}
+
+@keyframes rotation {
+  0%{
+    transform: rotateY(180deg);
+  }
+}
+.projectMain{
+  padding: 10px;
+}
+.projectMain > p{
+  font-size: calc(15px + 0.5vw);
+}
+
+.projectMain > a{
+  align-self: center;
+  text-decoration: none;
+  border: 2.5px solid var(--contrast) ;
+  border-radius: 5px;
+  padding: 8px 12px;
+  color: var(--contrast);
+  transition: 0.5s;
+  font-size: 30px;
+  font-weight: 500;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+.projectMain > a:hover{
+  background-color: var(--contrast);
+  color: var(--mainColor);
+  border-color: var(--mainColor);
 }
